--- a/::/index.html
+++ b/::/index.html
@@ -8,7 +8,9 @@ height="200px"></p>
     <h1>Carneiro Martins</h1>
     <h2>1ºB NEM</h2>
     <p>Pensamento Computacional</p>
-    <ul class="lista">
+    
+<div class="listas">
+	<ul class="lista">
          <li>1º Trimestre</li>
          <li>2º Trimestre</li>
          <li>3º Trimestre</li> 
@@ -20,10 +22,16 @@ height="200px"></p>
          <li>HTML e CSS</li>
 
     </ol>
-<body>
+</div>
 
-         
+<div class="imagens">
+   <img src="computador.png" width="260" height="260">
+   <img src="computador.png" width="260" height="260">
+   <img src="computador.png" width="260" height="260">
+   <img src="computador.png" width="260" height="260">
+   <img src="computador.png" width="260" height="260">
 
+   </div>
 
 </body>
 
